KBParser/src/test/java/org/bambrikii/kbParser/dql/grammar/DqlGrammarParser.java
// $ANTLR 3.3 Nov 30, 2010 12:46:29 C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g 2011-07-10 00:14:31

package org.bambrikii.kbParser.dql.grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class DqlGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "WS", "SELECT", "FROM", "WHERE", "ORDER_BY", "GROUP_BY", "CONDITION_OPERATOR", "NOT_EQ", "MORE", "LESS", "EQ", "LIKE", "PLUS", "MINUS", "DIGIT", "DOT", "LETTER", "ORDER_DIRECTION", "COMMA", "'('", "')'", "'\\''"
    };
    public static final int EOF=-1;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int WS=4;
    public static final int SELECT=5;
    public static final int FROM=6;
    public static final int WHERE=7;
    public static final int ORDER_BY=8;
    public static final int GROUP_BY=9;
    public static final int CONDITION_OPERATOR=10;
    public static final int NOT_EQ=11;
    public static final int MORE=12;
    public static final int LESS=13;
    public static final int EQ=14;
    public static final int LIKE=15;
    public static final int PLUS=16;
    public static final int MINUS=17;
    public static final int DIGIT=18;
    public static final int DOT=19;
    public static final int LETTER=20;
    public static final int ORDER_DIRECTION=21;
    public static final int COMMA=22;

    // delegates
    // delegators


        public DqlGrammarParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DqlGrammarParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return DqlGrammarParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g"; }


    public static class query_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "query"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:20:1: query : select ( WS )+ from ( ( WS )+ where )? ( ( WS )+ group_by )? ;
    public final DqlGrammarParser.query_return query() throws RecognitionException {
        DqlGrammarParser.query_return retval = new DqlGrammarParser.query_return();
        retval.start = input.LT(1);
        int query_StartIndex = input.index();
        Object root_0 = null;

        Token WS2=null;
        Token WS4=null;
        Token WS6=null;
        DqlGrammarParser.select_return select1 = null;

        DqlGrammarParser.from_return from3 = null;

        DqlGrammarParser.where_return where5 = null;

        DqlGrammarParser.group_by_return group_by7 = null;


        Object WS2_tree=null;
        Object WS4_tree=null;
        Object WS6_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:20:7: ( select ( WS )+ from ( ( WS )+ where )? ( ( WS )+ group_by )? )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:21:2: select ( WS )+ from ( ( WS )+ where )? ( ( WS )+ group_by )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_select_in_query67);
            select1=select();

            state._fsp--;

            adaptor.addChild(root_0, select1.getTree());
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:21:11: ( WS )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==WS) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:21:11: WS
            	    {
            	    WS2=(Token)match(input,WS,FOLLOW_WS_in_query69); 

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            pushFollow(FOLLOW_from_in_query73);
            from3=from();

            state._fsp--;

            adaptor.addChild(root_0, from3.getTree());
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:21:19: ( ( WS )+ where )?
            int alt3=2;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:21:21: ( WS )+ where
                    {
                    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:21:23: ( WS )+
                    int cnt2=0;
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==WS) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:21:23: WS
                    	    {
                    	    WS4=(Token)match(input,WS,FOLLOW_WS_in_query77); 

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt2 >= 1 ) break loop2;
                                EarlyExitException eee =
                                    new EarlyExitException(2, input);
                                throw eee;
                        }
                        cnt2++;
                    } while (true);

                    pushFollow(FOLLOW_where_in_query81);
                    where5=where();

                    state._fsp--;

                    adaptor.addChild(root_0, where5.getTree());

                    }
                    break;

            }

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:21:35: ( ( WS )+ group_by )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==WS) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:21:37: ( WS )+ group_by
                    {
                    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:21:39: ( WS )+
                    int cnt4=0;
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==WS) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:21:39: WS
                    	    {
                    	    WS6=(Token)match(input,WS,FOLLOW_WS_in_query88); 

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt4 >= 1 ) break loop4;
                                EarlyExitException eee =
                                    new EarlyExitException(4, input);
                                throw eee;
                        }
                        cnt4++;
                    } while (true);

                    pushFollow(FOLLOW_group_by_in_query92);
                    group_by7=group_by();

                    state._fsp--;

                    adaptor.addChild(root_0, group_by7.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "query"

    public static class select_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "select"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:23:1: select : SELECT ( WS )+ column ( elements_delimiter column )* ;
    public final DqlGrammarParser.select_return select() throws RecognitionException {
        DqlGrammarParser.select_return retval = new DqlGrammarParser.select_return();
        retval.start = input.LT(1);
        int select_StartIndex = input.index();
        Object root_0 = null;

        Token SELECT8=null;
        Token WS9=null;
        DqlGrammarParser.column_return column10 = null;

        DqlGrammarParser.elements_delimiter_return elements_delimiter11 = null;

        DqlGrammarParser.column_return column12 = null;


        Object SELECT8_tree=null;
        Object WS9_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:23:8: ( SELECT ( WS )+ column ( elements_delimiter column )* )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:24:2: SELECT ( WS )+ column ( elements_delimiter column )*
            {
            root_0 = (Object)adaptor.nil();

            SELECT8=(Token)match(input,SELECT,FOLLOW_SELECT_in_select104); 
            SELECT8_tree = (Object)adaptor.create(SELECT8);
            root_0 = (Object)adaptor.becomeRoot(SELECT8_tree, root_0);

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:24:12: ( WS )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==WS) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:24:12: WS
            	    {
            	    WS9=(Token)match(input,WS,FOLLOW_WS_in_select107); 

            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);

            pushFollow(FOLLOW_column_in_select111);
            column10=column();

            state._fsp--;

            adaptor.addChild(root_0, column10.getTree());
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:24:22: ( elements_delimiter column )*
            loop7:
            do {
                int alt7=2;
                alt7 = dfa7.predict(input);
                switch (alt7) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:24:24: elements_delimiter column
            	    {
            	    pushFollow(FOLLOW_elements_delimiter_in_select115);
            	    elements_delimiter11=elements_delimiter();

            	    state._fsp--;

            	    pushFollow(FOLLOW_column_in_select118);
            	    column12=column();

            	    state._fsp--;

            	    adaptor.addChild(root_0, column12.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "select"

    public static class from_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "from"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:26:1: from : FROM ( WS )+ table ( elements_delimiter table )* ;
    public final DqlGrammarParser.from_return from() throws RecognitionException {
        DqlGrammarParser.from_return retval = new DqlGrammarParser.from_return();
        retval.start = input.LT(1);
        int from_StartIndex = input.index();
        Object root_0 = null;

        Token FROM13=null;
        Token WS14=null;
        DqlGrammarParser.table_return table15 = null;

        DqlGrammarParser.elements_delimiter_return elements_delimiter16 = null;

        DqlGrammarParser.table_return table17 = null;


        Object FROM13_tree=null;
        Object WS14_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:26:6: ( FROM ( WS )+ table ( elements_delimiter table )* )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:27:2: FROM ( WS )+ table ( elements_delimiter table )*
            {
            root_0 = (Object)adaptor.nil();

            FROM13=(Token)match(input,FROM,FOLLOW_FROM_in_from130); 
            FROM13_tree = (Object)adaptor.create(FROM13);
            root_0 = (Object)adaptor.becomeRoot(FROM13_tree, root_0);

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:27:10: ( WS )+
            int cnt8=0;
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==WS) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:27:10: WS
            	    {
            	    WS14=(Token)match(input,WS,FOLLOW_WS_in_from133); 

            	    }
            	    break;

            	default :
            	    if ( cnt8 >= 1 ) break loop8;
                        EarlyExitException eee =
                            new EarlyExitException(8, input);
                        throw eee;
                }
                cnt8++;
            } while (true);

            pushFollow(FOLLOW_table_in_from137);
            table15=table();

            state._fsp--;

            adaptor.addChild(root_0, table15.getTree());
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:27:19: ( elements_delimiter table )*
            loop9:
            do {
                int alt9=2;
                alt9 = dfa9.predict(input);
                switch (alt9) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:27:21: elements_delimiter table
            	    {
            	    pushFollow(FOLLOW_elements_delimiter_in_from141);
            	    elements_delimiter16=elements_delimiter();

            	    state._fsp--;

            	    pushFollow(FOLLOW_table_in_from144);
            	    table17=table();

            	    state._fsp--;

            	    adaptor.addChild(root_0, table17.getTree());

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "from"

    public static class where_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "where"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:29:1: where : WHERE ( WS )+ condition_expr_aggr ( elements_delimiter condition_expr_aggr )* ;
    public final DqlGrammarParser.where_return where() throws RecognitionException {
        DqlGrammarParser.where_return retval = new DqlGrammarParser.where_return();
        retval.start = input.LT(1);
        int where_StartIndex = input.index();
        Object root_0 = null;

        Token WHERE18=null;
        Token WS19=null;
        DqlGrammarParser.condition_expr_aggr_return condition_expr_aggr20 = null;

        DqlGrammarParser.elements_delimiter_return elements_delimiter21 = null;

        DqlGrammarParser.condition_expr_aggr_return condition_expr_aggr22 = null;


        Object WHERE18_tree=null;
        Object WS19_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:29:7: ( WHERE ( WS )+ condition_expr_aggr ( elements_delimiter condition_expr_aggr )* )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:30:2: WHERE ( WS )+ condition_expr_aggr ( elements_delimiter condition_expr_aggr )*
            {
            root_0 = (Object)adaptor.nil();

            WHERE18=(Token)match(input,WHERE,FOLLOW_WHERE_in_where156); 
            WHERE18_tree = (Object)adaptor.create(WHERE18);
            root_0 = (Object)adaptor.becomeRoot(WHERE18_tree, root_0);

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:30:11: ( WS )+
            int cnt10=0;
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==WS) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:30:11: WS
            	    {
            	    WS19=(Token)match(input,WS,FOLLOW_WS_in_where159); 

            	    }
            	    break;

            	default :
            	    if ( cnt10 >= 1 ) break loop10;
                        EarlyExitException eee =
                            new EarlyExitException(10, input);
                        throw eee;
                }
                cnt10++;
            } while (true);

            pushFollow(FOLLOW_condition_expr_aggr_in_where163);
            condition_expr_aggr20=condition_expr_aggr();

            state._fsp--;

            adaptor.addChild(root_0, condition_expr_aggr20.getTree());
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:30:34: ( elements_delimiter condition_expr_aggr )*
            loop11:
            do {
                int alt11=2;
                alt11 = dfa11.predict(input);
                switch (alt11) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:30:36: elements_delimiter condition_expr_aggr
            	    {
            	    pushFollow(FOLLOW_elements_delimiter_in_where167);
            	    elements_delimiter21=elements_delimiter();

            	    state._fsp--;

            	    pushFollow(FOLLOW_condition_expr_aggr_in_where170);
            	    condition_expr_aggr22=condition_expr_aggr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, condition_expr_aggr22.getTree());

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "where"

    public static class order_by_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "order_by"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:32:1: order_by : ORDER_BY order_expr ( elements_delimiter order_expr )* ;
    public final DqlGrammarParser.order_by_return order_by() throws RecognitionException {
        DqlGrammarParser.order_by_return retval = new DqlGrammarParser.order_by_return();
        retval.start = input.LT(1);
        int order_by_StartIndex = input.index();
        Object root_0 = null;

        Token ORDER_BY23=null;
        DqlGrammarParser.order_expr_return order_expr24 = null;

        DqlGrammarParser.elements_delimiter_return elements_delimiter25 = null;

        DqlGrammarParser.order_expr_return order_expr26 = null;


        Object ORDER_BY23_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:32:10: ( ORDER_BY order_expr ( elements_delimiter order_expr )* )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:33:2: ORDER_BY order_expr ( elements_delimiter order_expr )*
            {
            root_0 = (Object)adaptor.nil();

            ORDER_BY23=(Token)match(input,ORDER_BY,FOLLOW_ORDER_BY_in_order_by182); 
            ORDER_BY23_tree = (Object)adaptor.create(ORDER_BY23);
            root_0 = (Object)adaptor.becomeRoot(ORDER_BY23_tree, root_0);

            pushFollow(FOLLOW_order_expr_in_order_by185);
            order_expr24=order_expr();

            state._fsp--;

            adaptor.addChild(root_0, order_expr24.getTree());
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:33:23: ( elements_delimiter order_expr )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==WS||LA12_0==COMMA) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:33:25: elements_delimiter order_expr
            	    {
            	    pushFollow(FOLLOW_elements_delimiter_in_order_by189);
            	    elements_delimiter25=elements_delimiter();

            	    state._fsp--;

            	    pushFollow(FOLLOW_order_expr_in_order_by192);
            	    order_expr26=order_expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, order_expr26.getTree());

            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "order_by"

    public static class group_by_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "group_by"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:35:1: group_by : GROUP_BY ( WS )+ column ( elements_delimiter column )* ;
    public final DqlGrammarParser.group_by_return group_by() throws RecognitionException {
        DqlGrammarParser.group_by_return retval = new DqlGrammarParser.group_by_return();
        retval.start = input.LT(1);
        int group_by_StartIndex = input.index();
        Object root_0 = null;

        Token GROUP_BY27=null;
        Token WS28=null;
        DqlGrammarParser.column_return column29 = null;

        DqlGrammarParser.elements_delimiter_return elements_delimiter30 = null;

        DqlGrammarParser.column_return column31 = null;


        Object GROUP_BY27_tree=null;
        Object WS28_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:35:10: ( GROUP_BY ( WS )+ column ( elements_delimiter column )* )
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:36:2: GROUP_BY ( WS )+ column ( elements_delimiter column )*
            {
            root_0 = (Object)adaptor.nil();

            GROUP_BY27=(Token)match(input,GROUP_BY,FOLLOW_GROUP_BY_in_group_by204); 
            GROUP_BY27_tree = (Object)adaptor.create(GROUP_BY27);
            adaptor.addChild(root_0, GROUP_BY27_tree);

            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:36:13: ( WS )+
            int cnt13=0;
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==WS) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:36:13: WS
            	    {
            	    WS28=(Token)match(input,WS,FOLLOW_WS_in_group_by206); 

            	    }
            	    break;

            	default :
            	    if ( cnt13 >= 1 ) break loop13;
                        EarlyExitException eee =
                            new EarlyExitException(13, input);
                        throw eee;
                }
                cnt13++;
            } while (true);

            pushFollow(FOLLOW_column_in_group_by210);
            column29=column();

            state._fsp--;

            adaptor.addChild(root_0, column29.getTree());
            // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:36:23: ( elements_delimiter column )*
            loop14:
            do {
                int alt14=2;
                int LA14_0 = input.LA(1);

                if ( (LA14_0==WS||LA14_0==COMMA) ) {
                    alt14=1;
                }


                switch (alt14) {
            	case 1 :
            	    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:36:25: elements_delimiter column
            	    {
            	    pushFollow(FOLLOW_elements_delimiter_in_group_by214);
            	    elements_delimiter30=elements_delimiter();

            	    state._fsp--;

            	    pushFollow(FOLLOW_column_in_group_by217);
            	    column31=column();

            	    state._fsp--;

            	    adaptor.addChild(root_0, column31.getTree());

            	    }
            	    break;

            	default :
            	    break loop14;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "group_by"

    public static class condition_expr_aggr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "condition_expr_aggr"
    // C:\\Users\\asd\\workspaceBambrikii\\KBParser\\src\\test\\java\\org\\bambrikii\\kbParser\\dql\\grammar\\DqlGrammar.g:38:1: condition_expr_aggr : '(' ( WS )* condition_expr ( ( WS )+ CONDITION_OPERATOR ( WS )+ condition_expr_aggr )* ( WS )* ')' ;
    public final DqlGrammarParser.condition_expr_aggr_return condition_expr_aggr() throws RecognitionException {
        DqlGrammarParser.condition_expr_aggr_return retval = new DqlGrammarParser.condition_expr_aggr_return();
        retval.start = input.LT(1);
        int condition_expr_aggr_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal32=null;
        Token WS33=null;
        Token WS35=null;
        Token CONDITION_OPERATOR36=null;
        Token WS37=null;
        Token WS39=null;
        Token char_literal40=null;
        DqlGrammarParser.condition_expr_return condition_expr34 = null;
